--- a/css/demo.css
+++ b/css/demo.css
@@ -1,3 +1,5 @@
+/*pallete: https://coolors.co/f1c40f-e6fafc-f7c59f-ff6b35-d8f793;*/
+
 *,
 *::after,
 *::before {
@@ -23,7 +25,7 @@ html, body {
 body {
 	font-family: 'Inconsolata', monospace;
 	color: #141417;
-	background: #d0cfc5;
+	background: white;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-user-select: none;  
@@ -92,7 +94,7 @@ a:focus {
 	width: 100%;
 	height: 100%;
 	text-align: center;
-	background: #f1c40f;
+	background: #F1C40F;
 }
 
 .js .loading::after {
@@ -242,6 +244,7 @@ a:focus {
 
 .content__title--center {
 	margin: auto;
+	padding-top: 1em;
 }
 
 .content__title--right {
@@ -487,6 +490,7 @@ a:focus {
 .diam {
 	position: fixed;
 	z-index: 90;
+	pointer-events: visible;
 }
 
 .menu .menu__link:hover,
@@ -782,12 +786,75 @@ a:focus {
 
 .demo-modal { background: #6f6f6f; color: #bfbfbf; }
 
+/* General link styles */
+.link {
+	outline: none;
+	text-decoration: none;
+	position: relative;
+	line-height: 1;
+	color: #9e9ba4;
+}
+
+/* Takiri */
+.link--takiri {
+	-webkit-transition: color 0.5s;
+	transition: color 0.5s;
+}
+
+.link--takiri:hover {
+	color: #1e1a1b;
+}
+
+.link--takiri::before {
+	content: '';
+	position: absolute;
+	height: 36px;
+	width: 80%;
+	top: 50%;
+	margin-top: -18px;
+	left: -10%;
+	z-index: -1;
+	background: #F9F9F9;
+	-webkit-transform: rotate3d(0,0,1,45deg) scale3d(0,1,1);
+	transform: rotate3d(0,0,1,45deg) scale3d(0,1,1);
+	-webkit-transition: -webkit-transform 0.5s;
+	transition: transform 0.5s;
+}
+
+.link--takiri:hover::before {
+	-webkit-transform: rotate3d(0,0,1,45deg) scale3d(1,1,1);
+	transform: rotate3d(0,0,1,45deg) scale3d(1,1,1);
+}
+
+.link--takiri span {
+	font-size: 20%;
+	font-weight: 400;
+	position: absolute;
+	right: 15px;
+	color: #F1C40F;
+	bottom: 0;
+	opacity: 0;
+	-webkit-transform: translate3d(-10px,-10px,0);
+	transform: translate3d(-10px,-10px,0);
+	-webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
+	transition: transform 0.5s, opacity 0.5s;
+}
+
+.link--takiri:hover span {
+	opacity: 1;
+	-webkit-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
+}
+
 @media screen and (max-width: 56.250em) {
 	.btn--tool {
 		font-size: 3vw;
 	}
 	.media__toolbar {
 		padding: 3.5vw;
+	}
+	.content__title--center {
+		padding-top: 200px;
 	}
 }
 
@@ -796,6 +863,7 @@ a:focus {
 	.codrops-header__tagline {
 		width: 100%;
 		padding: 1em 0 0;
+		margin-bottom: 2em;
 	}
 	.demo {
 		font-size: 1em;
@@ -855,5 +923,8 @@ a:focus {
 	}
 	.dual {
 		margin-top: 0;
+	}
+	.content__title--center {
+		padding-top: 200px;
 	}
 }
